# binance_collector_test

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: binance_collector.rs  logic.rs  main.rs  mathematics.rs  migrations.rs
src/analysis/: asset.rs
src/core/: config.rs  types.rs
src/exchange/: binance.rs
src/storage/: database.rs
