[package]
name = "binance_collector_test"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
ndarray = "0.15.0"
ndarray-stats = "0.6.0"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
binance_sync = { package = "binance", git = "https://github.com/m18n/binance-rs.git", branch = "master" }
pyo3 = { version = "0.22.3",features = ["auto-initialize"] }
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2",features = ["postgres", "runtime-tokio-native-tls","chrono", "macros"] }
futures = "0.3.30"
once_cell = "1.19.0"
anyhow = { version = "1.0.89",features = ["backtrace"] }
numpy = { version = "0.22.0" }
serde_json = "1.0.132"
lazy_static = "1.5.0"
binance_async = { version = "1.3.3",package = "binance-rs-async" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-appender = "0.2.3"
async-trait = "0.1.86"
reqwest = "0.11.27"
approx = "0.5.1"
mockall = "0.13.1"
